@startuml
class MainWindow {
  + initUI()
  + create_persistent_widgets()
  + fill_combo_box()
  + update_color_bar_and_text()
  + handle_mode_selection()
  + load_and_execute_python_file()
}
note top of MainWindow
  (EN) Main window of the application
  (DE) Hauptfenster der Anwendung
end note

class Config {
  + read_parameter_config()
  + read_mode_config()
  + write_mode_config()
}
note top of Config
  (EN) Manages configuration settings
  (DE) Verwaltung der Konfigurationseinstellungen
end note

class SimulationWidget {
  + initUI()
}
note top of SimulationWidget
  (EN) Specific widget for simulation mode
  (DE) Spezifisches Widget für den Simulationsmodus
end note

class EmulationWidget {
  + initUI()
}
note top of EmulationWidget
  (EN) Specific widget for emulation mode
  (DE) Spezifisches Widget für den Emulationsmodus
end note

class BackgroundWidget {
  + paintEvent()
}
note top of BackgroundWidget
  (EN) Background widget for the main window
  (DE) Hintergrundwidget für das Hauptfenster
end note

class CustomToolBar {
}
note top of CustomToolBar
  (EN) Custom toolbar for the main window
  (DE) Benutzerdefinierte Toolbar für das Hauptfenster
end note

MainWindow --> Config
MainWindow --> BackgroundWidget
MainWindow --> CustomToolBar
MainWindow --> SimulationWidget
MainWindow --> EmulationWidget
@enduml
